# email-tracker

./: README.md  email-tracker.cabal
app/: Main.hs
src/: Lib.hs
