name:                email-tracker
version:             0.1.0.0
synopsis:            invisible pixels to make your recipient's actions visible
description:         Please see README.md
homepage:            https://github.com/BunsenMcDubbs/email-tracker#readme
license:             GPL-3
license-file:        LICENSE
author:              Andrew Dai
maintainer:          a@andrewdai.co
copyright:           2017 Andrew Dai
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
                     , time
  default-language:    Haskell2010

executable email-tracker-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , scotty
                     , email-tracker
  default-language:    Haskell2010

test-suite email-tracker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , email-tracker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/email-tracker
